<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.aya.shoestore.ui.fragment.WelcomeFragment"
        android:label="@string/header_welcome"
        tools:layout="@layout/welcome_screen">

        <action
            android:id="@+id/action_WelcomeFragment_to_InstractionFragment"
            app:destination="@id/InstractionFragment" />
    </fragment>

    <fragment
        android:id="@+id/InstractionFragment"
        android:name="com.aya.shoestore.ui.fragment.InstractionFragment"
        android:label="@string/header_instraction"
        tools:layout="@layout/instarction_fragment">

        <action
            android:id="@+id/action_InstractionFragment_to_ShoeListFragment"
            app:destination="@id/ShoeListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/LoginFragment"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.aya.shoestore.ui.fragment.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment">

        <action
            android:id="@+id/action_LoginFragment_to_WelcomeFragment"
            app:destination="@id/WelcomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/ShoeListFragment"
        android:name="com.aya.shoestore.ui.fragment.ShoeListFragment"
        android:label="@string/shoeList"
        tools:layout="@layout/shoe_list_fragment">

        <action
            android:id="@+id/action_ShoeListFragment_to_ShoeDetailsFragment"
            app:destination="@id/ShoeDetailsFragment" />
        <argument
            android:name="name"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="empty" />
        <argument
            android:name="company"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="empty" />
        <argument
            android:name="size"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="empty" />
        <argument
            android:name="desc"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="empty" />
    </fragment>

    <fragment
        android:id="@+id/ShoeDetailsFragment"
        android:name="com.aya.shoestore.ui.fragment.ShoeDetailsFragment"
        android:label="@string/detailsItem"
        tools:layout="@layout/shoe_details_fragment">

        <action
            android:id="@+id/action_ShoeDetailsFragment_to_ShoeListFragment"
            app:destination="@id/ShoeListFragment" />
    </fragment>

</navigation>