<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="50dp"
    >


    <TextView
        android:id="@+id/tx_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/tx_name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tx_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company"
        app:layout_constraintTop_toBottomOf="@+id/tx_company"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tx_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/company"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/size"
        app:layout_constraintTop_toBottomOf="@+id/tx_size"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tx_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/size"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"
        app:layout_constraintTop_toBottomOf="@+id/tx_desc"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancle"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>