<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_instraction"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/instraction"
            />

        <TextView
            android:id="@+id/instraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instraction"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/shoeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeList"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/instraction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>