<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >


            <TextView
                android:id="@+id/tx_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/tx_email"
                app:layout_constraintStart_toStartOf="@id/tx_email"
                />


            <TextView
                android:id="@+id/tx_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/tx_password"
                app:layout_constraintStart_toStartOf="@id/tx_password"
                />


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                />


            <Button
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/skip"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintStart_toStartOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>